@@ -1,6 +1,5 @@
 -server
 -Xmx2G
--XX:-UseBiasedLocking
 -XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
 -XX:+ExplicitGCInvokesConcurrent
@@ -16,3 +15,5 @@
 -DHADOOP_USER_NAME=hive
 -Duser.timezone=Asia/Kathmandu
 -XX:ErrorFile=/docker/logs/product-tests-presto-jvm-error-file.log
+-XX:+UnlockDiagnosticVMOptions
+-XX:+UseAESCTRIntrinsics
